--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!---About me--->
     <section class="about">
         <div class="main">
-            <img src="img/IMG_6402.jpg">
+            <img src="../IMG_6402.jpg">
             <div class="about-text">
                 <h2>About Me</h2>
                 <h5>Developer <span>& Designer</span></h5>
